--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -25,6 +27,18 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <form>
+            <div class="d-flex justify-content-between">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label for="checkbox" class="form-check-label">Uppercase</label>
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label for="checkbox" class="form-check-label">Lowercase</label>
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label for="checkbox" class="form-check-label">Numbers</label>
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label for="checkbox" class="form-check-label">Special</label>
+            </div>
+          </form>
           <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
