added checkbox class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="card-footer">
           <form>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between checkbox">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label for="checkbox" class="form-check-label">Uppercase</label>
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
